z-index bug solved & fade animation added

--- a/email-msg-style.css
+++ b/email-msg-style.css
@@ -13,18 +13,6 @@
     --text-color: #000;
     --btn-text-color: #fff;
 }
-
-body::-webkit-scrollbar{
-	width: 7px;
-	background-color: var(--secondary-color);
-}
-
-body::-webkit-scrollbar-thumb{
-	background: var(--main-color);
-	border-radius: 3px;
-}
-
-
 .error-bg-color{
     background-color: var(--error-color);
 }
